Fix carousel modal on Safari

--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -98,6 +98,12 @@
       color: theme('colors.dark');
     }
   }
+
+  &__modal {
+    position: relative;
+    width: 100%;
+    height: 70vh;
+  }
 }
 
 @media screen and (orientation: portrait) {
